tests/fixtures/invalid/pow_bool_bool_float.py
# Cannot call pow() with Bool, Bool, Float
x = pow(True, True, 1.0)
